# bad-chat-app

./: .replit  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: errors.rs  main.rs
static/: styles.css
